--- a/RayTracing/RayTracing.csproj
+++ b/RayTracing/RayTracing.csproj
@@ -60,7 +60,8 @@
     <Compile Include="Helpers.cs" />
     <Compile Include="Models\Pixel.cs" />
     <Compile Include="Models\Vector.cs" />
-    <Compile Include="Primitives\IPrimitive.cs" />
+    <Compile Include="Primitives\Box.cs" />
+    <Compile Include="Primitives\Primitive.cs" />
     <Compile Include="Primitives\Light.cs" />
     <Compile Include="Primitives\Plane.cs" />
     <Compile Include="Primitives\Sphere.cs" />
