--- a/RayTracing/RayTracing.csproj
+++ b/RayTracing/RayTracing.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -57,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Extensions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Models\Pixel.cs" />
     <Compile Include="Models\Vector.cs" />
@@ -67,6 +69,7 @@
     <Compile Include="Primitives\Sphere.cs" />
     <Compile Include="Primitives\Surface.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="RealPolynomialRootFinder.cs" />
     <Compile Include="Render.cs" />
     <Compile Include="RenderOptions.cs" />
     <Compile Include="RotationMatrix.cs" />
