--- a/RayTracing/RayTracing.csproj
+++ b/RayTracing/RayTracing.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Pixel.cs" />
     <Compile Include="Models\Vector.cs" />
     <Compile Include="Primitives\Box.cs" />
+    <Compile Include="Primitives\Disk.cs" />
     <Compile Include="Primitives\Primitive.cs" />
     <Compile Include="Primitives\Light.cs" />
     <Compile Include="Primitives\Plane.cs" />
